# vSMTP

./: .dockerignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  alpine.Dockerfile  debian.Dockerfile  deny.toml
.github/workflows/: ci.yaml  plugins.yml  post-release.yaml  staging.yaml
benchmarks/stress/: Cargo.toml
docker/: README.md
examples/antivirus/: docker-compose.yaml  test.sh  vsmtp.vsl
examples/antivirus/clamav-docker/: clamav.Dockerfile  clamsmtp.Dockerfile
examples/antivirus/vsmtp-conf/: clamsmtp.vsl  filter.vsl  vsmtp.vsl
examples/auth/: Dockerfile  README.md  docker-compose.yaml  filter.vsl  test.sh  vsmtp.vsl
examples/data/: test-eicar.eml
examples/dnsbl/: README.md
src/plugins/vsmtp-plugin-csv/: Cargo.toml
src/plugins/vsmtp-plugin-dnsxl/: Cargo.toml
src/plugins/vsmtp-plugin-dnsxl/src/: api.rs  lib.rs  tests.rs
src/plugins/vsmtp-plugin-ldap/: Cargo.toml  build.rs
src/plugins/vsmtp-plugin-ldap/docker/: docker-compose.yml
src/plugins/vsmtp-plugin-ldap/docker/tests/simple/: test.sh
src/plugins/vsmtp-plugin-ldap/src/: api.rs
src/plugins/vsmtp-plugin-memcached/: Cargo.toml  build.rs
src/plugins/vsmtp-plugin-memcached/docker/: docker-compose.yml
src/plugins/vsmtp-plugin-memcached/docker/tests/simple/: test.sh
src/plugins/vsmtp-plugin-memcached/src/: api.rs
src/plugins/vsmtp-plugin-mongodb/: Cargo.toml
src/plugins/vsmtp-plugin-mongodb/docker/: docker-compose.yml
src/plugins/vsmtp-plugin-mongodb/docker/vsmtp-config/: filter.vsl
src/plugins/vsmtp-plugin-mongodb/docker/vsmtp-config/services/: db.vsl
src/plugins/vsmtp-plugin-mongodb/src/: api.rs  lib.rs
src/plugins/vsmtp-plugin-mysql/: Cargo.toml  build.rs
src/plugins/vsmtp-plugin-mysql/docker/: docker-compose.yml
src/plugins/vsmtp-plugin-mysql/docker/mysql-config/: greylist-dump.sql
src/plugins/vsmtp-plugin-mysql/docker/tests/simple/: test.sh
src/plugins/vsmtp-plugin-mysql/docker/vsmtp-config/: filter.vsl
src/plugins/vsmtp-plugin-mysql/src/: api.rs
src/plugins/vsmtp-plugin-redis/: Cargo.toml
src/plugins/vsmtp-plugin-redis/docker/: docker-compose.yml
src/plugins/vsmtp-plugin-redis/docker/redis/: Dockerfile
src/plugins/vsmtp-plugin-redis/docker/vsmtp-config/: filter.vsl
src/plugins/vsmtp-plugin-redis/docker/vsmtp-config/services/: db.vsl
src/plugins/vsmtp-plugin-redis/src/: api.rs  lib.rs  tests.rs
src/vqueue/: Cargo.toml
src/vqueue/src/: extension.rs  lib.rs
src/vqueue/src/cli/debugger/: message_show.rs  show.rs
src/vsmtp/vsmtp-auth/: Cargo.toml
src/vsmtp/vsmtp-auth/src/dkim/: public_key.rs
src/vsmtp/vsmtp-common/: Cargo.toml
src/vsmtp/vsmtp-common/src/: context.rs  lib.rs  libc_abstraction.rs  status.rs  transport.rs  utils.rs
src/vsmtp/vsmtp-common/src/auth/: credentials.rs  mechanism.rs
src/vsmtp/vsmtp-common/src/tests/: libc_abstraction.rs
src/vsmtp/vsmtp-common/src/transfer/: error.rs  status.rs
src/vsmtp/vsmtp-common/src/types/: address.rs  client_name.rs  domain.rs  reply.rs  reply_code.rs  target.rs  tls_cipher_suite.rs  tls_protocol_version.rs
src/vsmtp/vsmtp-config/: Cargo.toml
src/vsmtp/vsmtp-config/src/: config.rs  default.rs  ensure.rs  lib.rs  rustls_helper.rs  virtual_tls.rs
src/vsmtp/vsmtp-config/src/builder/: validate.rs  wants.rs  with.rs
src/vsmtp/vsmtp-config/src/tests/: mod.rs
src/vsmtp/vsmtp-config/src/tests/root_example/: antivirus.rs  logging.rs  secured.rs  simple.rs  tls.rs
src/vsmtp/vsmtp-core/: Cargo.toml  build.rs
src/vsmtp/vsmtp-core/src/: lib.rs  main.rs
src/vsmtp/vsmtp-delivery/: Cargo.toml
src/vsmtp/vsmtp-delivery/src/: deliver.rs  forward.rs  lib.rs  send.rs
src/vsmtp/vsmtp-mail-parser/: Cargo.toml
src/vsmtp/vsmtp-mail-parser/src/implementation/: mail_mime_parser.rs
src/vsmtp/vsmtp-mail-parser/src/traits/: error.rs  mail_parser.rs
src/vsmtp/vsmtp-plugin-vsl/: Cargo.toml
src/vsmtp/vsmtp-plugin-vsl/src/: objects.rs  unix.rs
src/vsmtp/vsmtp-protocol/: Cargo.toml
src/vsmtp/vsmtp-protocol/src/: command.rs  error.rs  lib.rs  reader.rs  receiver.rs  receiver_handler.rs  smtp_sasl.rs  writer.rs
src/vsmtp/vsmtp-rule-engine/: Cargo.toml
src/vsmtp/vsmtp-rule-engine/src/: error.rs  lib.rs  rule_engine.rs  rule_state.rs
src/vsmtp/vsmtp-rule-engine/src/api/: auth.rs  code.rs  dkim.rs  dmarc.rs  dns.rs  envelop.rs  fs.rs  logging.rs  mail_context.rs  message.rs  net.rs  spf.rs  state.rs  time.rs  transports.rs  utils.rs
src/vsmtp/vsmtp-rule-engine/src/domain_hierarchy/: builder.rs
src/vsmtp/vsmtp-rule-engine/src/dsl/cmd/: api.rs
src/vsmtp/vsmtp-rule-engine/src/dsl/directives/: mod.rs
src/vsmtp/vsmtp-rule-engine/src/dsl/smtp/: api.rs
src/vsmtp/vsmtp-server/: Cargo.toml
src/vsmtp/vsmtp-server/benches/: receiver.rs  receiver2.rs
src/vsmtp/vsmtp-server/benches/iai/: receiver.rs
src/vsmtp/vsmtp-server/src/: channel_message.rs  lib.rs  runtime.rs  scheduler.rs  server.rs
src/vsmtp/vsmtp-server/src/delivery/: deferred.rs  deliver.rs  mod.rs
src/vsmtp/vsmtp-server/src/receiver/: handler.rs  post_transaction.rs  pre_transaction.rs
src/vsmtp/vsmtp-server/src/working/: mod.rs
src/vsmtp/vsmtp-test/: Cargo.toml
src/vsmtp/vsmtp-test/config/no_malicious/: filter.vsl  vsmtp.vsl
src/vsmtp/vsmtp-test/config/no_malicious/conf.d/: config.vsl
src/vsmtp/vsmtp-test/src/: config.rs  lib.rs  receiver.rs  recv_handler_wrapper.rs
src/vsmtp/vsmtp-test/src/tests/: mod.rs
src/vsmtp/vsmtp-test/src/tests/examples/: aliases.rs  family.rs  message.rs
src/vsmtp/vsmtp-test/src/tests/process/: deferred.rs  delivery.rs  working.rs
src/vsmtp/vsmtp-test/src/tests/protocol/: clair.rs  dsn.rs  helo.rs  mail_from.rs  pipelining.rs  rset.rs  utf8.rs
src/vsmtp/vsmtp-test/src/tests/protocol/auth/: basic.rs  mod.rs
src/vsmtp/vsmtp-test/src/tests/protocol/tls/: starttls.rs  tunneled.rs  tunneled_with_auth.rs
src/vsmtp/vsmtp-test/src/tests/rule_engine/: actions.rs  context.rs  domains.rs  dotenv.rs  getters.rs  quarantine.rs
src/vsmtp/vsmtp-test/src/tests/rule_engine/rule_triage/: mod.rs
src/vsmtp/vsmtp-test/src/tests/server/: mod.rs
tools/install/deb/: changelog  postinst
(+2 files in other folders)
