[package]
edition = "2021"

name = "vsmtp-plugin-ldap"
version = "2.2.1"
license = "GPL-3.0-only"

authors = ["Team viridIT <https://viridit.com/>"]
description = "A plugin for vSMTP that enable support for ldap databases"

homepage = "https://github.com/viridIT/vsmtp-plugin-ldap"
repository = "https://github.com/viridIT/vsmtp-plugin-ldap"
documentation = "https://docs.rs/crate/vsmtp-plugin-ldap/"

readme = "README.md"
keywords = ["vsmtp", "ldap"]
categories = ["email", "database", "plugin"]

rust-version = "1.63.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.release]
pre-release-commit-message = "chore: Release {{crate_name}} version {{version}}"

[build-dependencies]
rhai-autodocs = "0.1.7"
rhai = { version = "=1.14.0", features = ["unchecked", "sync", "internals", "no_closure", "metadata"] }
serde = { version = "1.0.162", default-features = false, features = ["std", "derive"] }
humantime-serde = { version = "1.1.1", default-features = false }
ldap3 = { version = "0.11.1", default-features = false, features = ["sync", "tls-rustls"] }
r2d2 = { version = "0.8.10", default-features = false }
rustls = { version = "0.20.8", default-features = false, features = ["tls12", "logging"] }
rustls-pemfile = { version = "1.0.2", default-features = false }

[dependencies]
rhai = { version = "=1.14.0", features = ["unchecked", "sync", "internals", "no_closure", "metadata"] }
serde = { version = "1.0.162", default-features = false, features = ["std", "derive"] }
humantime-serde = { version = "1.1.1", default-features = false }
ldap3 = { version = "0.11.1", default-features = false, features = ["sync", "tls-rustls"] }
r2d2 = { version = "0.8.10", default-features = false }
rustls = { version = "0.20.8", default-features = false, features = ["tls12", "logging"] }
rustls-pemfile = { version = "1.0.2", default-features = false }
