[package]
name = "vsmtp-plugin-redis"
version = "2.2.1"
license = "GPL-3.0-only"
edition = "2021"
authors = ["Team viridIT <https://viridit.com/>"]

description = "A plugin for vSMTP that enable support for redis databases"

homepage = "https://github.com/viridIT/vsmtp-plugin-redis"
repository = "https://github.com/viridIT/vsmtp-plugin-redis"
documentation = "https://docs.rs/crate/vsmtp-plugin-redis/"

readme = "README.md"
keywords = ["vsmtp", "redis"]
categories = ["email", "database", "plugin"]

rust-version = "1.66.1"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
rhai = { version = "1.14.0", default-features = false, features = [
    "unchecked",
    "sync",
    "internals",
    "no_closure",
    "metadata",
] }
r2d2 = { version = "0.8.10", default-features = false }
r2d2_redis = { version = "0.14.0", default-features = false }
# redis = { version = "0.23.0", default-features = false, features = [
# # "acl",
# # "streams",
# # "geospatial",
# # "script",
# # "tls-rustls",
# # "json",
# "r2d2",
# ] }

serde = { version = "1.0.164", default-features = false, features = ["std", "derive"] }
humantime-serde = { version = "1.1.1", default-features = false }
