[package]
edition = "2021"

name = "vsmtp-protocol"
version = "2.2.1"
license = "GPL-3.0-only"

rust-version = "1.66.1"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"

homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
documentation = "https://docs.rs/crate/vsmtp-protoco/"

readme = "../../../README.md"
keywords = ["vsmtp"]
categories = ["email", "smtp"]

[package.metadata.release]
pre-release-replacements = [
    { file = "Cargo.toml", prerelease = true, search = "common\\]\nversion = .*", replace = "common]\nversion = \"={{version}}\"" },
]

[dependencies.vsmtp-common]
version = "=2.2.1"
path = "../vsmtp-common"

[dependencies]
tokio = { version = "1.28.2", default-features = false, features = [
    "macros",
    "sync",
    "fs",
    "libc",
    "mio",
    "rt-multi-thread",
    "net",
    "io-util",
] }
async-trait = { version = "0.1.68", default-features = false }
tokio-stream = { version = "0.1.14", default-features = false, features = ["time"] }
async-stream = { version = "0.3.5", default-features = false }

tokio-rustls = { version = "0.23.4", default-features = false, features = ["logging", "tls12"] }
rsasl = { version = "=2.0.0", default-features = false, features = [
    "provider",
    "config_builder",
    # "scram-sha-1",
    # "scram-sha-2",
    "anonymous",
    # "external",
    # "xoauth2",
    "plain",
    "login",
] }
tracing = { version = "0.1.37", default-features = false, features = ["std", "attributes", "release_max_level_info"] }

bytes = { version = "1.3.0", default-features = false }
memchr = { version = "2.5.0", default-features = false, features = ["std"] }
base64 = { version = "0.21.2", default-features = false, features = ["std"] }

strum = { version = "0.24.1", features = ["derive"] }
serde_with = { version = "3.0.0", default-features = false, features = ["std", "macros"] }

humantime = { version = "2.1.0" }
thiserror = { version = "1.0.40", default-features = false }

time = { version = "0.3.22", default-features = false, features = ["std", "formatting", "macros", "serde-well-known"] }

serde = { version = "1.0.164", default-features = false, features = ["std", "derive"] }
addr = { version = "0.15.6", default-features = false, features = ["std"] }

uuid = { version = "1.3.4", default-features = false, features = ["std", "v4", "fast-rng"] }
